--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <h3>Assignments</h3>
   <!--ul is unorder list and li is the list items-->
   <ul>
-    <li>Recipe Assignments</li>
+    <li><a href="recipe/index.html">Recipe Assignments</a></li>
     <li>Exercise 2</li>
     <li>Exercise 3</li>
   </ul>
