--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!--this is the homepage-->
 
-<<!doctype html>
+<!doctype html>
 <html>
   <head>
     <meta charset="utf-8">
-    <<title>Class Website</title>
+    <title>Class Website</title>
   </head>
 <body>
 
