--- a/recipe/index.html
+++ b/recipe/index.html
@@ -5,7 +5,7 @@
     <title>Chocolate Chip Cookies</title>
   </head>
   <body>
-    <<h1>Best Chocolate Chip Cookies</h1>
+    <h1>Best Chocolate Chip Cookies</h1>
     <p>This is the best chocolate chip cookie recipe ever! Simple ingedients, quick to prepare and amazingly delicious. These chocolate chipcookies turn out perfectly every single time!</p>
     <img src="cookie.jpg" alt="Chocolate Chip Cookies">
 
@@ -24,7 +24,7 @@
     </ul>
 
     <h2>Directions</h2>
-    <ol>
+    <ol> <!--this is order list which gives numbered list like 1, 2 and 3-->
       <li>Preheat oven to 350 degrees F (175 degrees C).</li>
       <li>Cream together the butter, white sugar, and brown sugar until smooth. Beat in the eggs one at a time, then stir in the vanilla.Dissolve baking soda in hot water. Add to batter along with salt. Stir in flour, chocolate chips, and nuts. Drop by largespoonfuls onto ungreased pans.</li>
       <li>Bake for about 10 minutes in the preheated oven, or until edges are nicely browned.</li>
