--- a/recipe/index.html
+++ b/recipe/index.html
@@ -31,7 +31,14 @@
     </ol>
     <h2>Nutrition Facts</h2>
     <h3>Per Serving:</h3>
-    <p>297.8 calories; protein 3.6g 7% DV; carbohydrates 38.9g 13% DV; fat 15.6g 24% DV; cholesterol 35.8mg 12% DV; sodium165.8mg 7% DV.</p>
+    <ul>
+      <li>297.8 calories;</li>
+      <li>protein 3.6g 7% DV;</li>
+      <li>carbohydrates 38.9g 13% DV;</li>
+      <li>fat 15.6g 24% DV;</li>
+      <li>cholesterol 35.8mg 12% DV;</li>
+      <li>sodium165.8mg 7% DV.</li>
+    </ul>
 
   </body>
 </html>
