--- a/recipe/index.html
+++ b/recipe/index.html
@@ -39,6 +39,7 @@
       <li>cholesterol 35.8mg 12% DV;</li>
       <li>sodium165.8mg 7% DV.</li>
     </ul>
-
+    <!-- this means go up one folder ..-->
+<a href="../index.html">Back to Class Website</a>
   </body>
 </html>
