--- a/recipe/index.html
+++ b/recipe/index.html
@@ -2,7 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="style.css">
     <title>Chocolate Chip Cookies</title>
+    <!-- this is an embeded css which overrides the style css so this would show for one this page -->
+    <style>
+      body{
+        border: solid 2px blue;
+      }
+    </style>
   </head>
   <body>
     <h1>Best Chocolate Chip Cookies</h1>
