--- a/recipe/index.html
+++ b/recipe/index.html
@@ -7,15 +7,17 @@
     <!-- this is an embeded css which overrides the style css so this would show for one this page -->
     <style>
       body{
-        border: solid 2px blue;
+        <!-- border: solid 2px blue;-->
       }
     </style>
   </head>
   <body>
     <h1>Best Chocolate Chip Cookies</h1>
+
+    <div>
     <p>This is the best chocolate chip cookie recipe ever! Simple ingedients, quick to prepare and amazingly delicious. These chocolate chipcookies turn out perfectly every single time!</p>
     <img src="cookie.jpg" alt="Chocolate Chip Cookies">
-
+    <img src="cookie1.jpg" alt="Chocolate Chip Cookies">
     <h2>Ingredients</h2>
     <ul>
       <li>1 cup of butter, softened</li>
@@ -38,15 +40,16 @@
     </ol>
     <h2>Nutrition Facts</h2>
     <h3>Per Serving:</h3>
-    <ul>
-      <li>297.8 calories;</li>
-      <li>protein 3.6g 7% DV;</li>
-      <li>carbohydrates 38.9g 13% DV;</li>
-      <li>fat 15.6g 24% DV;</li>
-      <li>cholesterol 35.8mg 12% DV;</li>
-      <li>sodium165.8mg 7% DV.</li>
+    <ul class="noPadding">
+      <li class="changeToInline">297.8 calories;</li>
+      <li class="changeToInline">protein 3.6g 7% DV;</li>
+      <li class="changeToInline">carbohydrates 38.9g 13% DV;</li>
+      <li class="changeToInline">fat 15.6g 24% DV;</li>
+      <li class="changeToInline">cholesterol 35.8mg 12% DV;</li>
+      <li class="changeToInline">sodium165.8mg 7% DV.</li>
     </ul>
     <!-- this means go up one folder ..-->
 <a href="../index.html">Back to Class Website</a>
+</div>
   </body>
 </html>
