--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <ul>
     <li><a href="recipe/index.html">Recipe Assignments</a></li>
     <li><a href="exercise2/exercise2.html">Exercise 2</li>
-    <li><a href="">Exercise 3</li>
+    <li><a href="exercise3.html">Exercise 3</li>
   </ul>
 
 </body>
