--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
   <!--ul is unorder list and li is the list items-->
   <ul>
     <li><a href="recipe/index.html">Recipe Assignments</a></li>
-    <li><a href="exercise2/exercise2.html">Exercise 2</li>
-    <li><a href="exercise3.html">Exercise 3</li>
+    <li><a href="exercise2/exercise2.html">Exercise 2</a></li>
+    <li><a href="exercise3.html">Exercise 3</a></li>
   </ul>
 
 </body>
