--- a/recipe/index.html
+++ b/recipe/index.html
@@ -5,11 +5,9 @@
     <link rel="stylesheet" href="style.css">
     <title>Chocolate Chip Cookies</title>
     <!-- this is an embeded css which overrides the style css so this would show for one this page -->
-    <style>
-      body{
-        <!-- border: solid 2px blue;-->
-      }
-    </style>
+    <!--<style>
+      body{border: solid 2px blue}
+  </style>  -->
   </head>
   <body>
     <h1>Best Chocolate Chip Cookies</h1>
