--- a/quiz2.html
+++ b/quiz2.html
@@ -10,9 +10,9 @@
     h1{
       color:red;
     }
-    h1 em{
+    header h1{
       color: red;
-    }  /*i don't think this one is working*/
+    } 
     .main-title{
       color: red;
     }
