--- a/exercise4.html
+++ b/exercise4.html
@@ -5,7 +5,7 @@
     <title>Exercise 4</title>
 
     <style>
-    /* Type CSS code here */
+    /* New code */
 body{
   background:linear-gradient(90deg, rgba(2,0,36,1) 9%, rgba(205,42,193,1) 35%, rgba(166,0,255,0.5) 48%),
    url("onepiece.jpeg") no-repeat right, top pink; /*0.5 is for transpareny*/
