--- a/exercise4.html
+++ b/exercise4.html
@@ -7,9 +7,19 @@
     <style>
     /* New code */
 body{
-  background:linear-gradient(90deg, rgba(2,0,36,1) 9%, rgba(205,42,193,1) 35%, rgba(166,0,255,0.5) 48%),
-   url("onepiece.jpeg") no-repeat right, top pink; /*0.5 is for transpareny*/
+  background:linear-gradient(90deg, rgba(2,0,36,0.5) 9%, rgba(205,42,193,0.5) 35%, rgba(166,0,255,0.5) 48%),
+   url("onepiece.jpeg") no-repeat right, top pink;
+   /*0.5 is for transpareny*/
 }
+p{
+  border:solid 5px black;
+  margin-top: -20em;
+  margin-bottom: 2em;
+  margin-right: 75em;
+  padding: 1em;
+  color: white;
+}
+
 .content{
   margin-top: 25em;
 }
