--- a/exercise7.html
+++ b/exercise7.html
@@ -68,5 +68,8 @@
 
       </div> <!-- closing .flex-container -->
   </div> <!-- closing #wrapper -->
+  <ul>
+    <li><a href="../index.html">Back to Class Website</a></li>
+  </ul>
 </body>
 </html>
