--- a/exercise3.html
+++ b/exercise3.html
@@ -32,5 +32,8 @@
     <p>
       The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from <q>de Finibus Bonorum et Malorum</q> by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.
     </p>
+    <ul>
+      <li><a href="../index.html">Back to Class Website</a></li>
+    </ul>
   </body>
 </html>
