--- a/exercise5.html
+++ b/exercise5.html
@@ -56,5 +56,8 @@
         <button>Submit</button>
       </div> <!-- .content -->
     </div> <!-- #wrapper -->
+    <ul>
+      <li><a href="../index.html">Back to Class Website</a></li>
+    </ul>
   </body>
 </html>
