--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
     <li><a href="recipe/index.html">Recipe Assignments</a></li>
     <li><a href="exercise2/exercise2.html">Exercise 2</a></li>
     <li><a href="exercise3.html">Exercise 3</a></li>
+    <li><a href="exercise4.html">Exercise 4</a></li>
+    <li><a href="exercise5.html">Exercise 5</a></li>
+    <li><a href="exercise6.html">Exercise 6</a></li>
+    <li><a href="exercise7.html">Exercise 7</a></li>
   </ul>
 
 </body>
