--- a/exercise5.html
+++ b/exercise5.html
@@ -1,63 +1,83 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Exercise 5</title>
 
-    <style>
+<head>
+  <meta charset="utf-8">
+  <title>Exercise 5</title>
 
-    #wrapper{
-      max-width:1170px;
-      margin:0 auto;
+  <style>
+    #wrapper {
+      max-width: 1170px;
+      margin: 0 auto;
       font-family: sans-serif;
     }
 
- /* Add CSS code here */
-    a:link{
-      color:pink;
+    /* Add CSS code here
+ a:link{
+   color:pink;
+ }
+
+ a:visited{
+   color: gray;
+ }
+
+ a:focus{
+   color: yellow;
+ }
+
+ a:hover{
+   text-decoration: underline;
+   color:red;
+ }
+
+ a:active{
+   color: maroon;
+ }*/
+    a {
+      color: red;
     }
 
-    a:visited{
-      color: gray;
-    }
-
-    a:focus{
-      color: yellow;
-    }
-
-    a:hover{
+    a:hover {
+      color: green;
       text-decoration: underline;
-      color:red;
     }
 
-    a:active{
-      color: maroon;
+    li a {
+      color: black;
+      text-decoration: none;
     }
-    </style>
+input{
+  border: solid 4px purple;
+  background: pink;
+}
+  </style>
 
-  </head>
-  <body>
-    <div id="wrapper">
-      <nav>
-        <ul>
-          <li><a href="https://www.bmcc.cuny.edu/">BMCC</a></li>
-          <li><a href="https://www.bcc.cuny.edu/">BCC</a></li>
-          <li><a href="https://www.qcc.cuny.edu/">QCC</a></li>
-          <li><a href="#">Hostos</a></li>
-          <li><a href="#">LaGuardia</a></li>
-          <li><a href="#">Guttman</a></li>
-        </ul>
-      </nav>
-      <div class="content">
-        <h1>Borough of Manhattan Community College</h1>
-        <p><a href="https://www.bmcc.cuny.edu/">BMCC</a> is a college that is alive with ideas and innovation, and supportive of the innate human striving for self-improvement. We offer opportunity to those students who desire it and wish to strive for it.</p>
-        <h3>Request More Information</h3>
-        <input type="text" id="emailbox" name="emailbox" placeholder="Your email">
-        <button>Submit</button>
-      </div> <!-- .content -->
-    </div> <!-- #wrapper -->
-    <ul>
-      <li><a href="../index.html">Back to Class Website</a></li>
-    </ul>
-  </body>
+</head>
+
+<body>
+  <div id="wrapper">
+    <nav>
+      <ul>
+        <li><a href="https://www.bmcc.cuny.edu/">BMCC</a></li>
+        <li><a href="https://www.bcc.cuny.edu/">BCC</a></li>
+        <li><a href="https://www.qcc.cuny.edu/">QCC</a></li>
+        <li><a href="#">Hostos</a></li>
+        <li><a href="#">LaGuardia</a></li>
+        <li><a href="#">Guttman</a></li>
+      </ul>
+    </nav>
+    <div class="content">
+      <h1>Borough of Manhattan Community College</h1>
+      <p><a href="https://www.bmcc.cuny.edu/">BMCC</a> is a college that is alive with ideas and innovation, and supportive of the innate human striving for self-improvement. We offer opportunity to those students who desire it and wish to strive for
+        it.</p>
+      <h3>Request More Information</h3>
+      <input type="text" id="emailbox" name="emailbox" placeholder="Your email">
+      <button>Submit</button>
+    </div> <!-- .content -->
+  </div> <!-- #wrapper -->
+  <ul>
+    <li><a href="index.html">Back to Class Website</a></li>
+  </ul>
+</body>
+
 </html>
