--- a/exercise7.html
+++ b/exercise7.html
@@ -69,7 +69,7 @@
       </div> <!-- closing .flex-container -->
   </div> <!-- closing #wrapper -->
   <ul>
-    <li><a href="../index.html">Back to Class Website</a></li>
+    <li><a href="index.html">Back to Class Website</a></li>
   </ul>
 </body>
 </html>
