--- a/exercise6.html
+++ b/exercise6.html
@@ -6,6 +6,18 @@
 
     <style>
     /* Type CSS code here */
+.col-left{
+  float: left;
+  width:48%;
+}
+
+.col-right{
+  float: right;
+  width:48%;
+}
+ul{
+  margin-top: 15em;
+}
 
     </style>
 
