--- a/midterm/onepiecemovies.html
+++ b/midterm/onepiecemovies.html
@@ -25,7 +25,7 @@
       <div class="card">
         <img src="images/9.png" alt="Image 9">
         <h3>One Piece Movie: The Desert Princess and the Pirates: Adventures in Alabasta</h3>
-        <h5>PG-13 2007 ‧ Action/Animation ‧ 1h 30m</h5>
+        <h5>2007 ‧ Action/Animation ‧ 1h 30m</h5>
         <p>A re-telling of the Alabaster Arc from One Piece (TV). Luffy and his crew come to rescue a land in the midst of a civil war, due to a powerful devil fruit user.</p>
       </div>
       <div class="card">
