--- a/midterm/index.html
+++ b/midterm/index.html
@@ -40,6 +40,20 @@
       <div class="paragrahleft">
           <p>Average Raiting: 4.9(113K) | 2,649 Reviews</p>
           <p>Monkey. D. Luffy refuses to let anyone or anything stand in the way of his quest to become the king of all pirates. With a course charted for the treacherous waters of the Grand Line and beyond, this is one captain who'll never give up until he's claimed the greatest treasure on Earth: the Legendary One Piece!</p>
+          <div class="genre-wrapper">
+            <div class="text-box">
+              <p>Action</p>
+            </div>
+            <div class="text-box">
+              <p>Adventure</p>
+            </div>
+            <div class="text-box">
+              <p>Fantasy</p>
+            </div>
+            <div class="text-box">
+              <p>Shonen</p>
+            </div>
+        </div>
         </div>
 
       <div class="paragrahright">
