--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
     <li><a href="exercise5.html">Exercise 5</a></li>
     <li><a href="exercise6.html">Exercise 6</a></li>
     <li><a href="exercise7.html">Exercise 7</a></li>
+    <li><a href="exercise8.html">Exercise 6</a></li>
+    <li><a href="exercise9.html">Exercise 7</a></li>
+    <li><a href="exercise10.html">Exercise 6</a></li>
+    <li><a href="exercise11.html">Exercise 7</a></li>
   </ul>
 
 </body>
