--- a/exercise8.html
+++ b/exercise8.html
@@ -42,7 +42,20 @@
       text-decoration: underline;
     }
 
+@media (max-width:768px){
 
+  nav li {
+    display: block;
+    border-right: none;
+    border-bottom: solid 1px #fff;
+    padding: 1em; /* padding up and down is the first one and left and right is the second one a 1 em is all sides*/
+  }
+
+  nav{
+    padding:0;
+  }
+
+}
 
     </style>
 
