--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <li><a href="exercise9.html">Exercise 7</a></li>
     <li><a href="exercise10.html">Exercise 6</a></li>
     <li><a href="exercise11.html">Exercise 7</a></li>
+    <li><a href="exercise12.html">Exercise 7</a></li>
   </ul>
 
 </body>
