--- a/final/index.html
+++ b/final/index.html
@@ -88,7 +88,7 @@
         </article>
       </section> <!-- .events-->
     </main>
-    <footer></footer>
+    <footer>Copyright 2020 The City University of New York  </footer>
   </div> <!--#wrapper-->
 </body>
 
