--- a/final/index.html
+++ b/final/index.html
@@ -63,16 +63,18 @@
     </div><!--.banner-->
     <main>
       <section class="news">
-        <h2>News</h2>
+        <h2> Design News</h2>
         <article class="news-item"><!--header (goes in the article) can be used for the news not for the page-->
-          <h3></h3>
-          <p></p>
-          <a href="#"></a>
+          <h3>CUNY TV Wins 21st New York Emmy Award For Animated Opening Sequence Of ‘Shades Of U.S.’ </h3>
+          <p>The City University of New York won two awards in the 63rd New York Emmy Awards, as CUNY TV and the New York City College of Technology each earned honors in Saturday’s ceremony. The award for CUNY TV brings to 21 the total number of
+            Emmys the station has been awarded by the National Academy of Television Arts & Sciences New York Chapter.</p>
+          <a href="#">Read More</a>
         </article>
         <article class="news-item">
-          <h3></h3>
-          <p></p>
-          <a href="#"></a>
+          <h3>CUNY Expands Digital Skills Curriculum and Creates Student Pipeline for Tech Jobs</h3>
+          <p>The City University of New York has significantly expanded its digital skills curriculum as part of a broad-based effort to produce a steady pipeline of diverse, adaptable, critical thinkers who can thrive in a workplace environment that
+            is increasingly reliant on advanced digital technologies across most sectors of the economy. Another aim of this initiative is to encourage traditionally underrepresented groups to take up tech-focused areas of study.</p>
+          <a href="#">Read More</a>
         </article>
       </section>
       <section class="events">
@@ -88,7 +90,7 @@
         </article>
       </section> <!-- .events-->
     </main>
-    <footer>Copyright 2020 The City University of New York  </footer>
+    <footer>Copyright 2020 The City University of New York </footer>
   </div> <!--#wrapper-->
 </body>
 
