--- a/exercise5.html
+++ b/exercise5.html
@@ -34,7 +34,7 @@
    color: maroon;
  }*/
     a {
-      color: red;
+      color: purple;
     }
 
     a:hover {
@@ -42,14 +42,20 @@
       text-decoration: underline;
     }
 
-    li a {
-      color: black;
+    ul li {
+      color: turquoise;
       text-decoration: none;
     }
-input{
-  border: solid 4px purple;
-  background: pink;
-}
+
+    input {
+      border: dashed 3px lightblue;
+      background: blue;
+    }
+
+    input:focus {
+      border: solid 4px purple;
+      background: pink;
+    }
   </style>
 
 </head>
