--- a/exercise6.html
+++ b/exercise6.html
@@ -9,15 +9,19 @@
 .col-left{
   float: left;
   width:48%;
+  clear: left;
 }
 
 .col-right{
   float: right;
   width:48%;
+  clear: right;
 }
+
 footer{
   margin-top: 12em;
 }
+
 
 
     </style>
