--- a/exercise10/exercise10.html
+++ b/exercise10/exercise10.html
@@ -37,7 +37,7 @@ nav ul{
    nav li:hover ul{
      display: block;
    }
-nav li{
+nav img{
   float:right;
   width: 15px;
 }
@@ -58,7 +58,7 @@ nav li{
       </ul>
     </li>
     <li>
-      <a href="#">Vegetables  <img src="expand.svg" alt="more"></a>
+      <a href="#">Vegetables <img src="expand.svg" alt="more"></a>
       <ul>
         <li><a href= "#"> Cabbage</a></li>
         <li><a href= "#"> Potatoes</a></li>
