--- a/final/index.html
+++ b/final/index.html
@@ -34,20 +34,20 @@
       <h3>Search by</h3>
       <nav>
         <ul>
-          <li><strong><a href="#">Discipline</a></strong>
+          <li><strong><a href="#">Discipline <img src="images/expand.svg" alt="more"></a></strong>
             <ul>
               <li><a href="">Digital Design</a></li>
               <li><a href="">Animation</a></li>
               <li><a href="">Industrial Design</a></li>
             </ul>
           </li>
-          <li><strong><a href="degree.html">Degree</a></strong>
+          <li><strong><a href="degree.html">Degree <img src="images/expand.svg" alt="more"></a></strong>
             <ul>
               <li><a href="">Associate</a></li>
               <li><a href="">Bachelor</a></li>
             </ul>
           </li>
-          <li><strong><a href="borough.html">Borough</a></strong>
+          <li><strong><a href="borough.html">Borough <img src="images/expand.svg" alt="more"></a></strong>
             <ul>
               <li><a href="">Brooklyn</a></li>
               <li><a href="">Manhattan</a></li>
@@ -58,7 +58,9 @@
         </ul>
       </nav>
     </div> <!--.search-program-->
-    <div class="banner"><h2>Queens College Ranked in Top 25 of Best Public Colleges and Universities for Graphic Design in the Nation</h2>
+    <div class="banner">
+      <h2>Queens College Ranked in Top 25 of Best Public Colleges and Universities for Graphic Design in the Nation</h2>
+      <a href="#" class="button">Apply Now</a>
     </div><!--.banner-->
     <main>
       <section class="news">
@@ -80,8 +82,8 @@
       </section>
       <section class="events">
         <h2>Events</h2>
-        <article class="news-item">
-          <img src="" alt="">
+        <article class="event-item">
+          <img src="https://via.placeholder.com/300x200" alt="">
           <h3><a href="https://events.cuny.edu/cec/virtual-digital-design-showcase-day/">VIRTUAL DIGITAL DESIGN SHOWCASE DAY</a></h3>
           <ul>
             <li><strong>Date:</strong>June 18, 2020</li>
