--- a/quiz5.html
+++ b/quiz5.html
@@ -20,6 +20,9 @@
       }
       .bluebox{
         background-color:blue;
+        position:absolute;
+        top:6.26em;
+        left:6.73em;
       }
       .greenbox{
         background-color:green;
