--- a/exercise10/exercise10.html
+++ b/exercise10/exercise10.html
@@ -69,7 +69,7 @@
       </li>
     </ul>
   </nav>
-  <li><a href="index.html">Back to Class Website</a></li>
+  <li><a href="../index.html">Back to Class Website</a></li>
 </body>
 
 </html>
