--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <li><a href="exercise7.html">Exercise 7</a></li>
     <li><a href="exercise8.html">Exercise 8</a></li>
     <li><a href="exercise9.html">Exercise 9</a></li>
-    <li><a href="exercise10.html">Exercise 10</a></li>
+    <li><a href="exercise10/exercise10.html">Exercise 10</a></li>
     <li><a href="exercise11.html">Exercise 11</a></li>
     <li><a href="exercise12.html">Exercise 12</a></li>
   </ul>
