--- a/final/index.html
+++ b/final/index.html
@@ -33,7 +33,7 @@
       <h2>Find a Design Program</h2>
       <h3>Search by</h3>
       <nav>
-        <ul class"program-menu">
+        <ul class="program-menu">
           <li><strong><a href="#">Discipline <img src="images/expand.svg" alt="more"></a></strong>
             <ul>
               <li><a href="">Digital Design</a></li>
