--- a/final/index.html
+++ b/final/index.html
@@ -21,7 +21,7 @@
             <li><a href="financialaid.html">Financial Aid</a></li>
             <li><a href="apply.html">Apply</a></li>
           </ul> <!--closing ul for top nav-->
-          <form class="search" action="" method="post"> <!--this is for the searh box-->
+          <form class="search" action="#" method="post"> <!--this is for the searh box-->
             <input type="search" name="search" value="Search">
             <input type="submit"> <!--this is creating a button for the search-->
           </form><!-- form for search box-->
@@ -34,11 +34,11 @@
       <h3>Search by</h3>
       <nav>
         <ul class="program-menu">
-          <li><strong><a href="#">Discipline <img src="images/expand.svg" alt="more"></a></strong>
+          <li><strong><a href="discipline.html">Discipline <img src="images/expand.svg" alt="more"></a></strong>
             <ul>
-              <li><a href="">Digital Design</a></li>
-              <li><a href="">Animation</a></li>
-              <li><a href="">Industrial Design</a></li>
+              <li><a href="digitaldesign.html">Digital Design</a></li>
+              <li><a href="animation.html">Animation</a></li>
+              <li><a href="industrialdesign.html">Industrial Design</a></li>
             </ul>
           </li>
           <li><strong><a href="degree.html">Degree <img src="images/expand.svg" alt="more"></a></strong>
@@ -49,10 +49,10 @@
           </li>
           <li><strong><a href="borough.html">Borough <img src="images/expand.svg" alt="more"></a></strong>
             <ul>
-              <li><a href="">Brooklyn</a></li>
-              <li><a href="">Manhattan</a></li>
-              <li><a href="">Bronx</a></li>
-              <li><a href="">Queens</a></li>
+              <li><a href="brooklyn.html">Brooklyn</a></li>
+              <li><a href="manhattan.html">Manhattan</a></li>
+              <li><a href="bronx.html">Bronx</a></li>
+              <li><a href="queens.html">Queens</a></li>
             </ul>
           </li>
         </ul>
@@ -93,7 +93,7 @@
         </article>
       </section> <!-- .events-->
     </main>
-    <footer>Copyright 2020 The City University of New York </footer>
+    <footer>&copy;Copyright 2020 The City University of New York </footer>
   </div> <!--#wrapper-->
 </body>
 
