--- a/final/index.html
+++ b/final/index.html
@@ -17,9 +17,9 @@
         <img class="menu-icon" src="images/menu.svg" alt="menu"><!--needs an icon for the phone view-->
         <div id="dropmenu"> <!--id is specific and can only be used one which works best for this while class can be resused-->
           <ul>
-            <li><a href="aboutcuny.html">About Cuny</a></li>
-            <li><a href="financialaid.html">Financial Aid</a></li>
-            <li><a href="apply.html">Apply</a></li>
+            <li><a href="https://www.cuny.edu/about/">About Cuny</a></li>
+            <li><a href="https://www.cuny.edu/financial-aid/">Financial Aid</a></li>
+            <li><a href="https://www.cuny.edu/admissions/apply-to-cuny/">Apply</a></li>
           </ul> <!--closing ul for top nav-->
           <form class="search" action="#" method="post"> <!--this is for the searh box-->
             <input type="search" name="search" value="Search">
@@ -34,20 +34,20 @@
       <h3>Search by</h3>
       <nav>
         <ul class="program-menu">
-          <li><strong><a href="discipline.html">Discipline <img src="images/expand.svg" alt="more"></a></strong>
+          <li><strong><a href="#">Discipline <img src="images/expand.svg" alt="more"></a></strong>
             <ul>
               <li><a href="digitaldesign.html">Digital Design</a></li>
               <li><a href="animation.html">Animation</a></li>
               <li><a href="industrialdesign.html">Industrial Design</a></li>
             </ul>
           </li>
-          <li><strong><a href="degree.html">Degree <img src="images/expand.svg" alt="more"></a></strong>
+          <li><strong><a href="#">Degree <img src="images/expand.svg" alt="more"></a></strong>
             <ul>
-              <li><a href="">Associate</a></li>
-              <li><a href="">Bachelor</a></li>
+              <li><a href="associate.html">Associate</a></li>
+              <li><a href="bachelor.html">Bachelor</a></li>
             </ul>
           </li>
-          <li><strong><a href="borough.html">Borough <img src="images/expand.svg" alt="more"></a></strong>
+          <li><strong><a href="#">Borough <img src="images/expand.svg" alt="more"></a></strong>
             <ul>
               <li><a href="brooklyn.html">Brooklyn</a></li>
               <li><a href="manhattan.html">Manhattan</a></li>
