--- a/final/digitaldesign.html
+++ b/final/digitaldesign.html
@@ -34,20 +34,20 @@
       <h3>Search by</h3>
       <nav>
         <ul class="program-menu">
-          <li><strong><a href="discipline.html">Discipline <img src="images/expand.svg" alt="more"></a></strong>
+          <li><strong><a href="#">Discipline <img src="images/expand.svg" alt="more"></a></strong>
             <ul>
               <li><a href="digitaldesign.html">Digital Design</a></li>
               <li><a href="animation.html">Animation</a></li>
               <li><a href="industrialdesign.html">Industrial Design</a></li>
             </ul>
           </li>
-          <li><strong><a href="degree.html">Degree <img src="images/expand.svg" alt="more"></a></strong>
+          <li><strong><a href="#">Degree <img src="images/expand.svg" alt="more"></a></strong>
             <ul>
               <li><a href="">Associate</a></li>
               <li><a href="">Bachelor</a></li>
             </ul>
           </li>
-          <li><strong><a href="borough.html">Borough <img src="images/expand.svg" alt="more"></a></strong>
+          <li><strong><a href="#">Borough <img src="images/expand.svg" alt="more"></a></strong>
             <ul>
               <li><a href="brooklyn.html">Brooklyn</a></li>
               <li><a href="manhattan.html">Manhattan</a></li>
@@ -62,9 +62,9 @@
       <h2>Queens College Ranked in Top 25 of Best Public Colleges and Universities for Graphic Design in the Nation</h2>
       <a href="#" class="button">Apply Now</a>
     </div><!--.banner-->
+    <!--a.card-link>article.program-card>img+div.card-body>h4+h3+h4+p this is for emmet to make it easier to type-->
     <main>
       <h2 class="programs-title">Digital Design</h2>
-      /*a.card-link>article.program-card>img+div.card-body>h4+h3+h4+p this is for emmet to make it easier to type*/
       <a href="https://www.bmcc.cuny.edu/academics/departments/media-arts-and-technology/multimedia-programming-and-design/" class="card-link">
         <article class="program-card">
           <img src="images/bmcc.jpg" alt="MMD BMCC" class="img-responsive">
