--- a/final/animation.html
+++ b/final/animation.html
@@ -14,7 +14,7 @@
     <header>
       <h1><a href="index.html">CUNY Design</a></h1>
       <nav class="topnav">
-        <img class="menu-icon" src="images/menu.svg" alt="menu"><!--needs an icon for the phone view-->
+        <img class="menu-icon" src="images/menu.svg" alt="menu" onclick="showMenu();"><!--needs an icon for the phone view-->
         <div id="dropmenu"> <!--id is specific and can only be used one which works best for this while class can be resused-->
           <ul>
             <li><a href="https://www.cuny.edu/about/">About Cuny</a></li>
