--- a/final/index.html
+++ b/final/index.html
@@ -7,14 +7,15 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>CUNY Design</title>
   <link rel="stylesheet" href="style.css">
+  <script src="showMenu.js"></script>
+  <script src="slideshow.js"></script> <!-- must link the script for the banner to work-->
 </head>
-
 <body>
   <div id="wrapper">
     <header>
       <h1><a href="index.html">CUNY Design</a></h1>
       <nav class="topnav">
-        <img class="menu-icon" src="images/menu.svg" alt="menu"><!--needs an icon for the phone view-->
+        <img class="menu-icon" src="images/menu.svg" alt="menu" onclick="showMenu();"><!--needs an icon for the phone view-->
         <div id="dropmenu"> <!--id is specific and can only be used one which works best for this while class can be resused-->
           <ul>
             <li><a href="https://www.cuny.edu/about/">About Cuny</a></li>
@@ -59,8 +60,13 @@
       </nav>
     </div> <!--.search-program-->
     <div class="banner">
-      <h2>Queens College Ranked in Top 25 of Best Public Colleges and Universities for Graphic Design in the Nation</h2>
-      <a href="#" class="button">Apply Now</a>
+      <img src="images/QC.png" alt="Queens College" class="img-responsive" id="banner-img">
+      <a href="#" onclick="slideshowUp();" class="slideshow-button prev"> < </a>
+      <a href="#" onclick="slideshowBack();" class="slideshow-button next"> > </a>
+      <div class="banner-block">
+        <h2>Queens College Ranked in Top 25 of Best Public Colleges and Universities for Graphic Design in the Nation</h2>
+        <a href="#" class="button">Apply Now</a>
+      </div>
     </div><!--.banner-->
     <main>
       <section class="news">
