--- a/final/associate.html
+++ b/final/associate.html
@@ -7,6 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>CUNY Design: Associate Degrees</title>
   <link rel="stylesheet" href="style.css">
+  <script src="showMenu.js"></script>
 </head>
 
 <body>
@@ -14,7 +15,7 @@
     <header>
       <h1><a href="index.html">CUNY Design</a></h1>
       <nav class="topnav">
-        <img class="menu-icon" src="images/menu.svg" alt="menu"><!--needs an icon for the phone view-->
+        <img class="menu-icon" src="images/menu.svg" alt="menu"  onclick="showMenu();"><!--needs an icon for the phone view-->
         <div id="dropmenu"> <!--id is specific and can only be used one which works best for this while class can be resused-->
           <ul>
             <li><a href="https://www.cuny.edu/about/">About Cuny</a></li>
