--- a/final/bachelor.html
+++ b/final/bachelor.html
@@ -63,69 +63,92 @@
       <a href="#" class="button">Apply Now</a>
     </div><!--.banner-->
     <main>
-      <a href="" class="card-link">
+      <a href="http://www.citytech.cuny.edu/communication-design/communication-design-bfa.aspx" class="card-link">
         <article class="program-card">
-          <img src="" alt=""class="img-responsive">
+          <img src="" alt="" class="img-responsive">
           <div class="card-body">
-            <h4></h4>
-            <h3></h3>
-            <h4></h4>
-            <p></p>
+            <h4>New York City College Of Technology </h4>
+            <h3>Communication Design </h3>
+            <h4>B.F.A. </h4>
+            <h4>Digital Design</h4>
+            <p>The BFA degree develops students' abilities to frame, research and solve increasingly
+              complex visual communication problems. Students develop a professional portfolio
+              that prepares them for employment as art directors, graphic designers, illustrators
+              and web designers. </p>
           </div>
         </article>
       </a>
-      <a href="" class="card-link">
+      <a href="https://www.qc.cuny.edu/academics/art/design-bfa/" class="card-link">
         <article class="program-card">
-          <img src="" alt=""class="img-responsive">
+          <img src="" alt="" class="img-responsive">
           <div class="card-body">
-            <h4></h4>
-            <h3></h3>
-            <h4></h4>
-            <p></p>
+            <h4>Queens College</h4>
+            <h3>Design</h3>
+            <h4>B.F.A.</h4>
+            <h4>Digital Design and Animation</h4>
+            <p>Queens College’s Design program combines knowledgeable faculty with industry
+              standard software and the creativity of a studio-based learning environment. Students
+              choose one of three concentrations: Communication Design, Animation & Illustration
+              or Interaction Design.
+            </p>
           </div>
         </article>
       </a>
-      <a href="" class="card-link">
+      <a href="https://edm.ccny.cuny.edu/" class="card-link">
         <article class="program-card">
-          <img src="" alt=""class="img-responsive">
+          <img src="" alt="" class="img-responsive">
           <div class="card-body">
-            <h4></h4>
-            <h3></h3>
-            <h4></h4>
-            <p></p>
+            <h4>The City College of New York </h4>
+            <h3>Electronic Design and Multimedia </h3>
+            <h4>B.F.A</h4>
+            <h4>Digital Design </h4>
+            <p>The Electronic Design & Multimedia prepares students for careers in design in
+              traditional print and emerging electronic media. It offers one of the most
+              comprehensive, affordable 4-year programs in electronic art at a New York City public
+              university, and has a 18-year record of alumni success.</p>
           </div>
         </article>
       </a>
-      <a href="" class="card-link">
+      <a href="https://www.york.cuny.edu/performing-and-fine-arts/programs/communications-technology" class="card-link">
         <article class="program-card">
-          <img src="" alt=""class="img-responsive">
+          <img src="" alt="" class="img-responsive">
           <div class="card-body">
-            <h4></h4>
-            <h3></h3>
-            <h4></h4>
-            <p></p>
+            <h4>York College </h4>
+            <h3>Communications Technology</h3>
+            <h4>B.S.</h4>
+            <h4>Digital Design </h4>
+            <p>An interdisciplinary program that brings together television, web, information
+              systems, computer science, and design. The program offers three main
+              concentrations: digital video, computer graphics, and systems and
+              applications.</p>
           </div>
         </article>
       </a>
-      <a href="" class="card-link">
+      <a href="https://lehman.smartcatalogiq.com/en/2019-2021/undergraduate-bulletin/academic-departments-and-programs/art/computer-graphics-and-imaging-b-s-58-credit-major/" class="card-link">
         <article class="program-card">
-          <img src="" alt=""class="img-responsive">
+          <img src="" alt="" class="img-responsive">
           <div class="card-body">
-            <h4></h4>
-            <h3></h3>
-            <h4></h4>
-            <p></p>
+            <h4>Lehman College </h4>
+            <h3>Computer Graphics and Imaging</h3>
+            <h4>B.S</h4>
+            <h4>Digital Design and Animation </h4>
+            <p>The Computer Graphics and Imaging program offers courses covering web design,
+              imaging, 3-D modeling, animation, interactivity, and broadcast design, preparing
+              students for careers as well as graduate study in these fields</p>
           </div>
         </article>
       </a>
-      <a href="" class="card-link">
+      <a href="https://www.baruch.cuny.edu/confluence/pages/viewpage.action?pageId=24052375#DepartmentofFineandPerformingArts-major" class="card-link">
         <article class="program-card">
-          <img src="" alt=""class="img-responsive">
+          <img src="" alt="" class="img-responsive">
           <div class="card-body">
-            <h4></h4>
-            <h3></h3>
-            <h4></h4>
-            <p></p>
+            <h4>Baruch College</h4>
+            <h3>Graphic Communication </h3>
+            <h4>B.A.</h4>
+            <h4>Digital Design </h4>
+            <p>The graphic communication specialization provides training in graphics as well as basic
+              training in the broader aspects of business communication. It prepares the graphic
+              artist to enter a business environment. </p>
           </div>
         </article>
       </a>
