--- a/final/bachelor.html
+++ b/final/bachelor.html
@@ -155,6 +155,20 @@
     </main>
     <footer>&copy;Copyright 2020 The City University of New York </footer>
   </div> <!--#wrapper-->
+
+  <script src="easy_background.js"></script> <!-- must link the script for the banner to work-->
+  <script>
+    easy_background(".banner",
+
+      {
+        slide: ["images/QC.png", "images/QC1.png"],
+
+        delay: [2000, 2000, 2000, 2000, 2000]
+      }
+
+
+    );
+  </script>
 </body>
 
 </html>
