--- a/final/manhattan.html
+++ b/final/manhattan.html
@@ -64,53 +64,82 @@
       <a href="#" class="button">Apply Now</a>
     </div><!--.banner-->
     <main>
-      <a href="" class="card-link">
+      <a href="https://www.bmcc.cuny.edu/academics/departments/media-arts-and-technology/animation-and-motion-graphics/" class="card-link">
         <article class="program-card">
           <img src="" alt=""class="img-responsive">
           <div class="card-body">
-            <h4></h4>
-            <h3></h3>
-            <h4></h4>
-            <p></p>
+            <h4>Borough of Manhattan Community College</h4>
+            <h3>Animation and Motion Graphics </h3>
+            <h4>A.S.</h4>
+            <h4>Animation </h4>
+            <p>The Animation and Motion Graphics program provides students with the
+fundamentals of two- and three-dimensional (2D and 3D) animation, motion graphics,
+and special effects for advertising campaigns, video games, movies, and television.</p>
           </div>
         </article>
       </a>
-      <a href="" class="card-link">
+      <a href="https://www.bmcc.cuny.edu/academics/departments/media-arts-and-technology/multimedia-programming-and-design/" class="card-link">
         <article class="program-card">
           <img src="" alt=""class="img-responsive">
           <div class="card-body">
-            <h4></h4>
-            <h3></h3>
-            <h4></h4>
-            <p></p>
+            <h4>Borough of Manhattan Community College</h4>
+            <h3>Multimedia Programming and Design</h3>
+            <h4>A.S</h4>
+            <h4>Digital Design</h4>
+            <p>The Multimedia Programming and Design Program prepares students for careers in a
+variety of multimedia industries, companies and institutions that develop, produce or
+market multimedia products, programs or services.</p>
           </div>
         </article>
       </a>
-      <a href="" class="card-link">
+      <a href="https://edm.ccny.cuny.edu/" class="card-link">
         <article class="program-card">
           <img src="" alt=""class="img-responsive">
           <div class="card-body">
-            <h4></h4>
-            <h3></h3>
-            <h4></h4>
-            <p></p>
+            <h4>The City College of New Yor</h4>
+            <h3>Electronic Design and Multimedia</h3>
+            <h4>B.F.A. </h4>
+            <h4>Digital Design </h4>
+            <p>The Electronic Design & Multimedia prepares students for careers in design in
+traditional print and emerging electronic media. It offers one of the most
+comprehensive, affordable 4-year programs in electronic art at a New York City public
+university, and has a 18-year record of alumni success.
+</p>
           </div>
         </article>
       </a>
-      <a href="" class="card-link">
+      <a href="https://www.baruch.cuny.edu/confluence/pages/viewpage.action?pageId=24052375#DepartmentofFineandPerformingArts-major" class="card-link">
         <article class="program-card">
           <img src="" alt=""class="img-responsive">
           <div class="card-body">
-            <h4></h4>
-            <h3></h3>
-            <h4></h4>
-            <p></p>
+            <h4>Baruch College </h4>
+            <h3>Graphic Communication </h3>
+            <h4>B.A.</h4>
+            <h4>Digital Design </h4>
+            <p>The graphic communication specialization provides training in graphics as well as basic
+training in the broader aspects of business communication. It prepares the graphic
+artist to enter a business environment.</p>
           </div>
         </article>
       </a>
     </main>
     <footer>&copy;Copyright 2020 The City University of New York </footer>
   </div> <!--#wrapper-->
+
+  <script src="easy_background.js"></script> <!-- must link the script for the banner to work-->
+  <script>
+    easy_background(".banner",
+
+      {
+        slide: ["images/QC.png", "images/QC1.png"],
+
+        delay: [2000, 2000, 2000, 2000, 2000]
+      }
+
+
+    );
+  </script>
+
 </body>
 
 </html>
