--- a/final/animation.html
+++ b/final/animation.html
@@ -63,42 +63,83 @@
       <a href="#" class="button">Apply Now</a>
     </div><!--.banner-->
     <main>
-      <a href="" class="card-link">
+      <a href="https://www.bmcc.cuny.edu/academics/departments/media-arts-and-technology/animation-and-motion-graphics/" class="card-link">
         <article class="program-card">
           <img src="" alt=""class="img-responsive">
           <div class="card-body">
-            <h4></h4>
-            <h3></h3>
-            <h4></h4>
-            <p></p>
+            <h4>Borough of Manhattan Community College </h4>
+            <h3>Animation and Motion Graphics</h3>
+            <h4>A.S.</h4>
+            <h4>Manhattan</h4>
+            <p>The Animation and Motion Graphics program provides students with the
+fundamentals of two- and three-dimensional (2D and 3D) animation, motion graphics,
+and special effects for advertising campaigns, video games, movies, and television.
+</p>
           </div>
         </article>
       </a>
-      <a href="" class="card-link">
+      <a href="https://www.hostos.cuny.edu/www-hostosdesign-com" class="card-link">
         <article class="program-card">
           <img src="" alt=""class="img-responsive">
           <div class="card-body">
-            <h4></h4>
-            <h3></h3>
-            <h4></h4>
-            <p></p>
+            <h4>Hostos Community College </h4>
+            <h3>Digital Design & Animation </h3>
+            <h4>A.S.</h4>
+            <h4>Bronx</h4>
+            <p>Through lectures and studio-based classes the Digital Design and Animation
+Program provides students with a strong foundation for future occupations in
+motion graphics, animation, graphic design and/or web design. </p>
           </div>
         </article>
       </a>
-      <a href="" class="card-link">
+      <a href="https://www.qc.cuny.edu/academics/art/design-bfa/" class="card-link">
         <article class="program-card">
           <img src="" alt=""class="img-responsive">
           <div class="card-body">
-            <h4></h4>
-            <h3></h3>
-            <h4></h4>
-            <p></p>
+            <h4>Queens College </h4>
+            <h3>Design</h3>
+            <h4>B.F.A.</h4>
+            <h4>Queens</h4>
+            <p>Queens College’s Design program combines knowledgeable faculty with industry
+standard software and the creativity of a studio-based learning environment. Students
+choose one of three concentrations: Communication Design, Animation & Illustration
+or Interaction Design.</p>
+          </div>
+        </article>
+      </a>
+      <a href="https://lehman.smartcatalogiq.com/en/2019-2021/undergraduate-bulletin/academic-departments-and-programs/art/computer-graphics-and-imaging-b-s-58-credit-major/" class="card-link">
+        <article class="program-card">
+          <img src="" alt=""class="img-responsive">
+          <div class="card-body">
+            <h4>Lehman College</h4>
+            <h3>Computer Graphics and Imaging</h3>
+            <h4>B.S.</h4>
+            <h4>Bronx</h4>
+            <p>The Computer Graphics and Imaging program offers courses covering web design,
+imaging, 3-D modeling, animation, interactivity, and broadcast design, preparing
+students for careers as well as graduate study in these fields. </p>
           </div>
         </article>
       </a>
     </main>
     <footer>&copy;Copyright 2020 The City University of New York </footer>
   </div> <!--#wrapper-->
+
+  <script src="easy_background.js"></script> <!-- must link the script for the banner to work-->
+  <script>
+    easy_background(".banner",
+
+      {
+        slide: ["images/QC.png", "images/QC1.png"],
+
+        delay: [2000, 2000, 2000, 2000, 2000]
+      }
+
+
+    );
+  </script>
+
+
 </body>
 
 </html>
