--- a/final/associate.html
+++ b/final/associate.html
@@ -7,7 +7,6 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>CUNY Design: Associate Degrees</title>
   <link rel="stylesheet" href="style.css">
-  <script src="showMenu.js"></script>
 </head>
 
 <body>
@@ -15,7 +14,7 @@
     <header>
       <h1><a href="index.html">CUNY Design</a></h1>
       <nav class="topnav">
-        <img class="menu-icon" src="images/menu.svg" alt="menu"  onclick="showMenu();"><!--needs an icon for the phone view-->
+        <img class="menu-icon" src="images/menu.svg" alt="menu" onclick="showMenu();"><!--needs an icon for the phone view-->
         <div id="dropmenu"> <!--id is specific and can only be used one which works best for this while class can be resused-->
           <ul>
             <li><a href="https://www.cuny.edu/about/">About Cuny</a></li>
@@ -64,130 +63,186 @@
       <a href="#" class="button">Apply Now</a>
     </div><!--.banner-->
     <main>
-      <a href="" class="card-link">
+      <a href="https://www.bmcc.cuny.edu/academics/departments/media-arts-and-technology/animation-and-motion-graphics/" class="card-link">
         <article class="program-card">
-          <img src="" alt=""class="img-responsive">
+          <img src="" alt="" class="img-responsive">
           <div class="card-body">
-            <h4></h4>
-            <h3></h3>
-            <h4></h4>
-            <p></p>
+            <h4>Borough of Manhattan Community College</h4>
+            <h3>Animation and Motion Graphics </h3>
+            <h4>A.S.</h4>
+            <h4>Animation</h4>
+            <p>The Animation and Motion Graphics program provides students with the
+              fundamentals of two- and three-dimensional (2D and 3D) animation, motion graphics,
+              and special effects for advertising campaigns, video games, movies, and television.</p>
           </div>
         </article>
       </a>
-      <a href="" class="card-link">
+      <a href="https://www.bmcc.cuny.edu/academics/departments/media-arts-and-technology/multimedia-programming-and-design/" class="card-link">
         <article class="program-card">
-          <img src="" alt=""class="img-responsive">
+          <img src="" alt="" class="img-responsive">
           <div class="card-body">
-            <h4></h4>
-            <h3></h3>
-            <h4></h4>
-            <p></p>
+            <h4>Borough of Manhattan Community College </h4>
+            <h3>Multimedia Programming and Design </h3>
+            <h4>A.S. </h4>
+            <h4>S. Digital Design </h4>
+            <p>The Multimedia Programming and Design Program prepares students for careers in a
+              variety of multimedia industries, companies and institutions that develop, produce or
+              market multimedia products, programs or services.
+            </p>
           </div>
         </article>
       </a>
-      <a href="" class="card-link">
+      <a href="http://www.bcc.cuny.edu/academics/academic-departments/art-and-music-department/degree-and-certificate-programs-courses/digital-design/" class="card-link">
         <article class="program-card">
-          <img src="" alt=""class="img-responsive">
+          <img src="" alt="" class="img-responsive">
           <div class="card-body">
-            <h4></h4>
-            <h3></h3>
-            <h4></h4>
-            <p></p>
+            <h4>Bronx Community College</h4>
+            <h3>Digital Design</h3>
+            <h4>A.A.S.</h4>
+            <h4> Digital Design </h4>
+            <p>This program prepares students for careers in the visual communication industry in
+              positions such as graphic design, web design, computer animation, 3D graphic
+              visualization, motion graphics design and interactive multimedia design.
+            </p>
           </div>
         </article>
       </a>
-      <a href="" class="card-link">
+      <a href="https://www.hostos.cuny.edu/www-hostosdesign-com" class="card-link">
         <article class="program-card">
-          <img src="" alt=""class="img-responsive">
+          <img src="" alt="" class="img-responsive">
           <div class="card-body">
-            <h4></h4>
-            <h3></h3>
-            <h4></h4>
-            <p></p>
+            <h4>Hostos Community College</h4>
+            <h3>Digital Design & Animation </h3>
+            <h4>A.S. </h4>
+            <h4>Digital Design and Animation</h4>
+            <p>Through lectures and studio-based classes the Digital Design and Animation
+              Program provides students with a strong foundation for future occupations in
+              motion graphics, animation, graphic design and/or web design.</p>
           </div>
         </article>
       </a>
-      <a href="" class="card-link">
+      <a href="https://www.hostos.cuny.edu/Administrative-Offices/Office-of-Academic-Affairs/Departments/Humanities/Programs/Game-Design-(1)" class="card-link">
         <article class="program-card">
-          <img src="" alt=""class="img-responsive">
+          <img src="" alt="" class="img-responsive">
           <div class="card-body">
-            <h4></h4>
-            <h3></h3>
-            <h4></h4>
-            <p></p>
+            <h4>Hostos Community College</h4>
+            <h3>Game Design </h3>
+            <h4>A.S</h4>
+            <h4>Digital Design</h4>
+            <p>The Associate degree in Game Design will provide students with a strong foundation
+              for future occupations in the entertainment software industry. It will provide students
+              with additional career opportunities in the field of entertainment software publishing.
+            </p>
           </div>
         </article>
       </a>
-      <a href="" class="card-link">
+      <a href="https://www.kbcc.cuny.edu/academicdepartments/art/about.html" class="card-link">
         <article class="program-card">
-          <img src="" alt=""class="img-responsive">
+          <img src="" alt="" class="img-responsive">
           <div class="card-body">
-            <h4></h4>
-            <h3></h3>
-            <h4></h4>
-            <p></p>
+            <h4>Kingsborough Community College </h4>
+            <h3>Graphic Design and Illustration </h3>
+            <h4>A.S</h4>
+            <h4>Digital Design</h4>
+            <p>The Art Department at Kingsborough Community College is dedicated to providing a
+              comprehensive program of study in the visual arts, designed to prepare students of
+              diverse life experience for either continued baccalaureate study or immediate entry
+              into a range of visual art professions.
+              LaGuardia Community College</p>
           </div>
         </article>
       </a>
-      <a href="" class="card-link">
+      <a href="https://www.laguardia.edu/" class="card-link">
         <article class="program-card">
-          <img src="" alt=""class="img-responsive">
+          <img src="" alt="" class="img-responsive">
           <div class="card-body">
-            <h4></h4>
-            <h3></h3>
-            <h4></h4>
-            <p></p>
+            <h4>LaGuardia Community College</h4>
+            <h3>Industrial Design </h3>
+            <h4>A.A.S. </h4>
+            <h4>Indusrial Design </h4>
+            <p>The Industrial Design program provides students a foundation experience in
+              the necessary skills to begin a career in Computer Assisted Design (CAD),
+              Model making, Product Design and Fabrication or transfer to a four-year
+              institution.</p>
           </div>
         </article>
       </a>
-      <a href="" class="card-link">
+      <a href="https://www.laguardia.edu/new-media-technology/" class="card-link">
         <article class="program-card">
-          <img src="" alt=""class="img-responsive">
+          <img src="" alt="" class="img-responsive">
           <div class="card-body">
-            <h4></h4>
-            <h3></h3>
-            <h4></h4>
-            <p></p>
+            <h4>LaGuardia Community College New Media Technology</h4>
+            <h3>New Media Technology</h3>
+            <h4>A.A.S</h4>
+            <h4>Digital Design </h4>
+            <p>The New Media Technology major offers students the opportunity to work and
+              experiment with some of the exciting technologies available today.
+              Students develop a broad understanding of multimedia and Internet technologies in
+              order to develop expertise in creating digital content.</p>
           </div>
         </article>
       </a>
-      <a href="" class="card-link">
+      <a href="https://www.qcc.cuny.edu/academies/vapa-academy.html" class="card-link">
         <article class="program-card">
-          <img src="" alt=""class="img-responsive">
+          <img src="" alt="" class="img-responsive">
           <div class="card-body">
-            <h4></h4>
-            <h3></h3>
-            <h4></h4>
-            <p></p>
+            <h4>Queensborough Community College</h4>
+            <h3>Digital Art and Design </h3>
+            <h4>A.S</h4>
+            <h4>Digital Design </h4>
+            <p>The A.S. degree program in Digital Art and Design prepares students to enter the
+              greatly expanding field of new media. In addition to four basic courses that provide a
+              solid background in art, students take five courses in digital art and design, which
+              develop computer skills for fine and applied arts.</p>
           </div>
         </article>
       </a>
-      <a href="" class="card-link">
+      <a href="http://www.citytech.cuny.edu/mechanical/industrial-technology-aas.aspx" class="card-link">
         <article class="program-card">
-          <img src="" alt=""class="img-responsive">
+          <img src="" alt="" class="img-responsive">
           <div class="card-body">
-            <h4></h4>
-            <h3></h3>
-            <h4></h4>
-            <p></p>
+            <h4>New York City College Of Technology</h4>
+            <h3>Industrial Design Technology</h3>
+            <h4>A.A.S.</h4>
+            <h4>Indusrial Design </h4>
+            <p>The Industrial Design Technology (IND) program is designed to provide students with a
+              wide variety of skills enabling them to utilize a number of 2D, 3D and
+              animation/simulation software packages in several diverse fields.
+            </p>
           </div>
         </article>
       </a>
-      <a href="" class="card-link">
+      <a href="http://www.citytech.cuny.edu/communication-design/communication-design-aas.aspx" class="card-link">
         <article class="program-card">
-          <img src="" alt=""class="img-responsive">
+          <img src="" alt="" class="img-responsive">
           <div class="card-body">
-            <h4></h4>
-            <h3></h3>
-            <h4></h4>
-            <p></p>
+            <h4>New York City College Of Technology</h4>
+            <h3>Communication Design</h3>
+            <h4>A.A.S.</h4>
+            <h4>Digital Design</h4>
+            <p>The AAS degree program in Communication Design provides students with a solid
+              foundation in the theory and practices of the Communication Design profession and a
+              grounding in general education. Students explore visual expression through a range of
+              courses in drawing, design and web design.</p>
           </div>
         </article>
       </a>
     </main>
     <footer>&copy;Copyright 2020 The City University of New York </footer>
   </div> <!--#wrapper-->
+  <script src="easy_background.js"></script> <!-- must link the script for the banner to work-->
+  <script>
+    easy_background(".banner",
+
+      {
+        slide: ["images/QC.png", "images/QC1.png"],
+
+        delay: [2000, 2000, 2000, 2000, 2000]
+      }
+
+
+    );
+  </script>
 </body>
 
 </html>
