--- a/final/bronx.html
+++ b/final/bronx.html
@@ -64,53 +64,80 @@
       <a href="#" class="button">Apply Now</a>
     </div><!--.banner-->
     <main>
-      <a href="" class="card-link">
+      <a href="http://www.bcc.cuny.edu/academics/academic-departments/art-and-music-department/degree-and-certificate-programs-courses/digital-design/" class="card-link">
         <article class="program-card">
           <img src="" alt=""class="img-responsive">
           <div class="card-body">
-            <h4></h4>
-            <h3></h3>
-            <h4></h4>
-            <p></p>
+            <h4>Bronx Community College </h4>
+            <h3>Digital Design</h3>
+            <h4>A.A.S.</h4>
+            <h4>Digital Design</h4>
+            <p>This program prepares students for careers in the visual communication industry in
+positions such as graphic design, web design, computer animation, 3D graphic
+visualization, motion graphics design and interactive multimedia design.</p>
           </div>
         </article>
       </a>
-      <a href="" class="card-link">
+      <a href="https://www.hostos.cuny.edu/www-hostosdesign-com" class="card-link">
         <article class="program-card">
           <img src="" alt=""class="img-responsive">
           <div class="card-body">
-            <h4></h4>
-            <h3></h3>
-            <h4></h4>
-            <p></p>
+            <h4>Hostos Community College</h4>
+            <h3>Digital Design & Animation</h3>
+            <h4>A.S.</h4>
+            <h4>Digital Design and Animation </h4>
+            <p>Through lectures and studio-based classes the Digital Design and Animation
+Program provides students with a strong foundation for future occupations in
+motion graphics, animation, graphic design and/or web design. </p>
           </div>
         </article>
       </a>
-      <a href="" class="card-link">
+      <a href="https://www.hostos.cuny.edu/Administrative-Offices/Office-of-Academic-Affairs/Departments/Humanities/Programs/Game-Design-(1)" class="card-link">
         <article class="program-card">
           <img src="" alt=""class="img-responsive">
           <div class="card-body">
-            <h4></h4>
-            <h3></h3>
-            <h4></h4>
-            <p></p>
+            <h4>Hostos Community College</h4>
+            <h3>Game Design</h3>
+            <h4>A.S.</h4>
+            <h4>Digital Design </h4>
+            <p>The Associate degree in Game Design will provide students with a strong foundation
+for future occupations in the entertainment software industry. It will provide students
+with additional career opportunities in the field of entertainment software publishing.</p>
           </div>
         </article>
       </a>
-      <a href="" class="card-link">
+      <a href="https://lehman.smartcatalogiq.com/en/2019-2021/undergraduate-bulletin/academic-departments-and-programs/art/computer-graphics-and-imaging-b-s-58-credit-major/" class="card-link">
         <article class="program-card">
           <img src="" alt=""class="img-responsive">
           <div class="card-body">
-            <h4></h4>
-            <h3></h3>
-            <h4></h4>
-            <p></p>
+            <h4>Lehman College </h4>
+            <h3>Computer Graphics and Imaging</h3>
+            <h4>B.S</h4>
+            <h4>Digital Design and Animation</h4>
+            <p>The Computer Graphics and Imaging program offers courses covering web design,
+imaging, 3-D modeling, animation, interactivity, and broadcast design, preparing
+students for careers as well as graduate study in these fields. </p>
           </div>
         </article>
       </a>
     </main>
     <footer>&copy;Copyright 2020 The City University of New York </footer>
   </div> <!--#wrapper-->
+
+  <script src="easy_background.js"></script> <!-- must link the script for the banner to work-->
+  <script>
+    easy_background(".banner",
+
+      {
+        slide: ["images/QC.png", "images/QC1.png"],
+
+        delay: [2000, 2000, 2000, 2000, 2000]
+      }
+
+
+    );
+  </script>
+
 </body>
 
 </html>
