--- a/final/brooklyn.html
+++ b/final/brooklyn.html
@@ -64,53 +64,84 @@
       <a href="#" class="button">Apply Now</a>
     </div><!--.banner-->
     <main>
-      <a href="" class="card-link">
+      <a href="https://www.kbcc.cuny.edu/academicdepartments/art/about.html" class="card-link">
         <article class="program-card">
-          <img src="" alt=""class="img-responsive">
+          <img src="" alt="" class="img-responsive">
           <div class="card-body">
-            <h4></h4>
-            <h3></h3>
-            <h4></h4>
-            <p></p>
+            <h4>Kingsborough Community College</h4>
+            <h3>Graphic Design and Illustration </h3>
+            <h4>A.S</h4>
+            <h4>Digital Design </h4>
+            <p>The Art Department at Kingsborough Community College is dedicated to providing a
+              comprehensive program of study in the visual arts, designed to prepare students of
+              diverse life experience for either continued baccalaureate study or immediate entry
+              into a range of visual art professions</p>
           </div>
         </article>
       </a>
-      <a href="" class="card-link">
+      <a href="http://www.citytech.cuny.edu/mechanical/industrial-technology-aas.aspx" class="card-link">
         <article class="program-card">
-          <img src="" alt=""class="img-responsive">
+          <img src="" alt="" class="img-responsive">
           <div class="card-body">
-            <h4></h4>
-            <h3></h3>
-            <h4></h4>
-            <p></p>
+            <h4>New York City College Of Technology</h4>
+            <h3>Industrial Design Technology</h3>
+            <h4>A.A.S. </h4>
+            <h4>Indusrial Design </h4>
+            <p>The Industrial Design Technology (IND) program is designed to provide students with a
+              wide variety of skills enabling them to utilize a number of 2D, 3D and
+              animation/simulation software packages in several diverse fields.
+            </p>
           </div>
         </article>
       </a>
-      <a href="" class="card-link">
+      <a href="http://www.citytech.cuny.edu/communication-design/communication-design-aas.aspx" class="card-link">
         <article class="program-card">
-          <img src="" alt=""class="img-responsive">
+          <img src="" alt="" class="img-responsive">
           <div class="card-body">
-            <h4></h4>
-            <h3></h3>
-            <h4></h4>
-            <p></p>
+            <h4>New York City College Of Technology </h4>
+            <h3>Communication Design</h3>
+            <h4>A.A.S</h4>
+            <h4>Digital Design</h4>
+            <p>The AAS degree program in Communication Design provides students with a solid
+              foundation in the theory and practices of the Communication Design profession and a
+              grounding in general education. Students explore visual expression through a range of
+              courses in drawing, design and web design. </p>
           </div>
         </article>
       </a>
-      <a href="" class="card-link">
+      <a href="http://www.citytech.cuny.edu/communication-design/communication-design-bfa.aspx" class="card-link">
         <article class="program-card">
-          <img src="" alt=""class="img-responsive">
+          <img src="" alt="" class="img-responsive">
           <div class="card-body">
-            <h4></h4>
-            <h3></h3>
-            <h4></h4>
-            <p></p>
+            <h4>New York City College Of Technology </h4>
+            <h3Communication Design</h3>
+              <h4>B.F.A.</h4>
+              <h4>Digital Design </h4>
+              <p>The BFA degree develops students' abilities to frame, research and solve increasingly
+                complex visual communication problems. Students develop a professional portfolio
+                that prepares them for employment as art directors, graphic designers, illustrators
+                and web designers.</p>
           </div>
         </article>
       </a>
     </main>
     <footer>&copy;Copyright 2020 The City University of New York </footer>
   </div> <!--#wrapper-->
+
+  <script src="easy_background.js"></script> <!-- must link the script for the banner to work-->
+  <script>
+    easy_background(".banner",
+
+      {
+        slide: ["images/QC.png", "images/QC1.png"],
+
+        delay: [2000, 2000, 2000, 2000, 2000]
+      }
+
+
+    );
+  </script>
+  
 </body>
 
 </html>
