--- a/final/industrialdesign.html
+++ b/final/industrialdesign.html
@@ -64,31 +64,51 @@
       <a href="#" class="button">Apply Now</a>
     </div><!--.banner-->
     <main>
-      <a href="" class="card-link">
+      <a href="https://www.laguardia.edu/" class="card-link">
         <article class="program-card">
           <img src="" alt=""class="img-responsive">
           <div class="card-body">
-            <h4></h4>
-            <h3></h3>
-            <h4></h4>
-            <p></p>
+            <h4>LaGuardia Community College</h4>
+            <h3>A.A.S.</h3>
+            <h4>Queens</h4>
+            <p>The Industrial Design program provides students a foundation experience in
+the necessary skills to begin a career in Computer Assisted Design (CAD),
+Model making, Product Design and Fabrication or transfer to a four-year
+institution.</p>
           </div>
         </article>
       </a>
-      <a href="" class="card-link">
+      <a href="http://www.citytech.cuny.edu/mechanical/industrial-technology-aas.aspx" class="card-link">
         <article class="program-card">
           <img src="" alt=""class="img-responsive">
           <div class="card-body">
-            <h4></h4>
-            <h3></h3>
-            <h4></h4>
-            <p></p>
+            <h4>New York City College Of Technology </h4>
+            <h3>A.A.S. </h3>
+            <h4>Brooklyn</h4>
+            <p>The Industrial Design Technology (IND) program is designed to provide students with a
+wide variety of skills enabling them to utilize a number of 2D, 3D and
+animation/simulation software packages in several diverse fields.
+</p>
           </div>
         </article>
       </a>
     </main>
     <footer>&copy;Copyright 2020 The City University of New York </footer>
   </div> <!--#wrapper-->
+
+  <script src="easy_background.js"></script> <!-- must link the script for the banner to work-->
+  <script>
+    easy_background(".banner",
+
+      {
+        slide: ["images/QC.png", "images/QC1.png"],
+
+        delay: [2000, 2000, 2000, 2000, 2000]
+      }
+
+
+    );
+  </script>
 </body>
 
 </html>
