--- a/final/queens.html
+++ b/final/queens.html
@@ -64,64 +64,100 @@
       <a href="#" class="button">Apply Now</a>
     </div><!--.banner-->
     <main>
-      <a href="" class="card-link">
+      <a href="https://www.laguardia.edu/" class="card-link">
         <article class="program-card">
-          <img src="" alt=""class="img-responsive">
+          <img src="" alt="" class="img-responsive">
           <div class="card-body">
-            <h4></h4>
-            <h3></h3>
-            <h4></h4>
-            <p></p>
+            <h4>LaGuardia Community College</h4>
+            <h3>Industrial Design</h3>
+            <h4>A.A.S</h4>
+            <h4>Indusrial Design </h4>
+            <p>The Industrial Design program provides students a foundation experience in
+              the necessary skills to begin a career in Computer Assisted Design (CAD),
+              Model making, Product Design and Fabrication or transfer to a four-year
+              institution.
+            </p>
           </div>
         </article>
       </a>
-      <a href="" class="card-link">
+      <a href="https://www.laguardia.edu/new-media-technology/" class="card-link">
         <article class="program-card">
-          <img src="" alt=""class="img-responsive">
+          <img src="" alt="" class="img-responsive">
           <div class="card-body">
-            <h4></h4>
-            <h3></h3>
-            <h4></h4>
-            <p></p>
+            <h4>LaGuardia Community College </h4>
+            <h3>New Media Technology</h3>
+            <h4>A.A.S</h4>
+            <h4>Digital Design </h4>
+            <p>The New Media Technology major offers students the opportunity to work and
+              experiment with some of the exciting technologies available today.
+              Students develop a broad understanding of multimedia and Internet technologies in
+              order to develop expertise in creating digital content.</p>
           </div>
         </article>
       </a>
-      <a href="" class="card-link">
+      <a href="https://www.qcc.cuny.edu/academies/vapa-academy.html" class="card-link">
         <article class="program-card">
-          <img src="" alt=""class="img-responsive">
+          <img src="" alt="" class="img-responsive">
           <div class="card-body">
-            <h4></h4>
-            <h3></h3>
-            <h4></h4>
-            <p></p>
+            <h4>Queensborough Community College </h4>
+            <h3>Digital Art and Design </h3>
+            <h4>A.S.</h4>
+            <h4>Digital Design</h4>
+            <p>The A.S. degree program in Digital Art and Design prepares students to enter the
+              greatly expanding field of new media. In addition to four basic courses that provide a
+              solid background in art, students take five courses in digital art and design, which
+              develop computer skills for fine and applied arts.</p>
           </div>
         </article>
       </a>
-      <a href="" class="card-link">
+      <a href="https://www.qc.cuny.edu/academics/art/design-bfa/" class="card-link">
         <article class="program-card">
-          <img src="" alt=""class="img-responsive">
+          <img src="" alt="" class="img-responsive">
           <div class="card-body">
-            <h4></h4>
-            <h3></h3>
-            <h4></h4>
-            <p></p>
+            <h4>Queens College</h4>
+            <h3>Design B.F.A</h3>
+            <h4>B.F.A</h4>
+            <h4>Digital Design and Animation</h4>
+            <p>Queens College’s Design program combines knowledgeable faculty with industry
+              standard software and the creativity of a studio-based learning environment. Students
+              choose one of three concentrations: Communication Design, Animation & Illustration
+              or Interaction Design.</p>
           </div>
         </article>
       </a>
-      <a href="" class="card-link">
+      <a href="https://www.york.cuny.edu/produce-and-print/contents/bulletin/school-of-arts-and-sciences/performing-and-fine-arts/communications-technology-bs" class="card-link">
         <article class="program-card">
-          <img src="" alt=""class="img-responsive">
+          <img src="" alt="" class="img-responsive">
           <div class="card-body">
-            <h4></h4>
-            <h3></h3>
-            <h4></h4>
-            <p></p>
+            <h4>York College</h4>
+            <h3>Communications Technology</h3>
+            <h4>B.S.</h4>
+            <h4>Digital Design</h4>
+            <p>An interdisciplinary program that brings together television, web, information
+              systems, computer science, and design. The program offers three main
+              concentrations: digital video, computer graphics, and systems and
+              applications.</p>
           </div>
         </article>
       </a>
     </main>
     <footer>&copy;Copyright 2020 The City University of New York </footer>
   </div> <!--#wrapper-->
+
+  <script src="easy_background.js"></script> <!-- must link the script for the banner to work-->
+  <script>
+    easy_background(".banner",
+
+      {
+        slide: ["images/QC.png", "images/QC1.png"],
+
+        delay: [2000, 2000, 2000, 2000, 2000]
+      }
+
+
+    );
+  </script>
+
 </body>
 
 </html>
