--- a/final/animation.html
+++ b/final/animation.html
@@ -65,7 +65,7 @@
     <main>
       <a href="https://www.bmcc.cuny.edu/academics/departments/media-arts-and-technology/animation-and-motion-graphics/" class="card-link">
         <article class="program-card">
-          <img src="" alt=""class="img-responsive">
+          <img src="images/bmcc.jpg" alt="MMD BMCC" class="img-responsive">
           <div class="card-body">
             <h4>Borough of Manhattan Community College </h4>
             <h3>Animation and Motion Graphics</h3>
@@ -80,7 +80,7 @@ and special effects for advertising campaigns, video games, movies, and televisi
       </a>
       <a href="https://www.hostos.cuny.edu/www-hostosdesign-com" class="card-link">
         <article class="program-card">
-          <img src="" alt=""class="img-responsive">
+          <img src="images/hostosdigital.png" alt="Hostos" class="img-responsive">
           <div class="card-body">
             <h4>Hostos Community College </h4>
             <h3>Digital Design & Animation </h3>
@@ -94,7 +94,7 @@ motion graphics, animation, graphic design and/or web design. </p>
       </a>
       <a href="https://www.qc.cuny.edu/academics/art/design-bfa/" class="card-link">
         <article class="program-card">
-          <img src="" alt=""class="img-responsive">
+          <img src="images/queensbfa.jpg" alt="Queens College" class="img-responsive">
           <div class="card-body">
             <h4>Queens College </h4>
             <h3>Design</h3>
@@ -109,7 +109,7 @@ or Interaction Design.</p>
       </a>
       <a href="https://lehman.smartcatalogiq.com/en/2019-2021/undergraduate-bulletin/academic-departments-and-programs/art/computer-graphics-and-imaging-b-s-58-credit-major/" class="card-link">
         <article class="program-card">
-          <img src="" alt=""class="img-responsive">
+          <img src="images/lehman.jpg" alt="Lehman College" class="img-responsive">
           <div class="card-body">
             <h4>Lehman College</h4>
             <h3>Computer Graphics and Imaging</h3>
