--- a/final/associate.html
+++ b/final/associate.html
@@ -65,7 +65,7 @@
     <main>
       <a href="https://www.bmcc.cuny.edu/academics/departments/media-arts-and-technology/animation-and-motion-graphics/" class="card-link">
         <article class="program-card">
-          <img src="" alt="" class="img-responsive">
+          <img src="images/bmcc.jpg" alt="MMD BMCC" class="img-responsive">
           <div class="card-body">
             <h4>Borough of Manhattan Community College</h4>
             <h3>Animation and Motion Graphics </h3>
@@ -79,7 +79,7 @@
       </a>
       <a href="https://www.bmcc.cuny.edu/academics/departments/media-arts-and-technology/multimedia-programming-and-design/" class="card-link">
         <article class="program-card">
-          <img src="" alt="" class="img-responsive">
+          <img src="images/bmcc.jpg" alt="MMD BMCC" class="img-responsive">
           <div class="card-body">
             <h4>Borough of Manhattan Community College </h4>
             <h3>Multimedia Programming and Design </h3>
@@ -94,7 +94,7 @@
       </a>
       <a href="http://www.bcc.cuny.edu/academics/academic-departments/art-and-music-department/degree-and-certificate-programs-courses/digital-design/" class="card-link">
         <article class="program-card">
-          <img src="" alt="" class="img-responsive">
+          <img src="images/bronx.jpg" alt="DD Bronx" class="img-responsive">
           <div class="card-body">
             <h4>Bronx Community College</h4>
             <h3>Digital Design</h3>
@@ -109,7 +109,7 @@
       </a>
       <a href="https://www.hostos.cuny.edu/www-hostosdesign-com" class="card-link">
         <article class="program-card">
-          <img src="" alt="" class="img-responsive">
+          <img src="images/hostosdigital.png" alt="Hostos" class="img-responsive">
           <div class="card-body">
             <h4>Hostos Community College</h4>
             <h3>Digital Design & Animation </h3>
@@ -123,7 +123,7 @@
       </a>
       <a href="https://www.hostos.cuny.edu/Administrative-Offices/Office-of-Academic-Affairs/Departments/Humanities/Programs/Game-Design-(1)" class="card-link">
         <article class="program-card">
-          <img src="" alt="" class="img-responsive">
+          <img src="images/hostosgame.png" alt="Hostos Game" class="img-responsive">
           <div class="card-body">
             <h4>Hostos Community College</h4>
             <h3>Game Design </h3>
@@ -138,7 +138,7 @@
       </a>
       <a href="https://www.kbcc.cuny.edu/academicdepartments/art/about.html" class="card-link">
         <article class="program-card">
-          <img src="" alt="" class="img-responsive">
+          <img src="images/kingdesign.png" alt="Kingsborough" class="img-responsive">
           <div class="card-body">
             <h4>Kingsborough Community College </h4>
             <h3>Graphic Design and Illustration </h3>
@@ -154,7 +154,7 @@
       </a>
       <a href="https://www.laguardia.edu/" class="card-link">
         <article class="program-card">
-          <img src="" alt="" class="img-responsive">
+          <img src="images/laguardia.jpg" alt="LaGuardia" class="img-responsive">
           <div class="card-body">
             <h4>LaGuardia Community College</h4>
             <h3>Industrial Design </h3>
@@ -169,7 +169,7 @@
       </a>
       <a href="https://www.laguardia.edu/new-media-technology/" class="card-link">
         <article class="program-card">
-          <img src="" alt="" class="img-responsive">
+          <img src="images/laguardia.jpg" alt="LaGuardia" class="img-responsive">
           <div class="card-body">
             <h4>LaGuardia Community College New Media Technology</h4>
             <h3>New Media Technology</h3>
@@ -184,7 +184,7 @@
       </a>
       <a href="https://www.qcc.cuny.edu/academies/vapa-academy.html" class="card-link">
         <article class="program-card">
-          <img src="" alt="" class="img-responsive">
+          <img src="images/queensdesign.png" alt="Queensborough" class="img-responsive">
           <div class="card-body">
             <h4>Queensborough Community College</h4>
             <h3>Digital Art and Design </h3>
@@ -199,7 +199,7 @@
       </a>
       <a href="http://www.citytech.cuny.edu/mechanical/industrial-technology-aas.aspx" class="card-link">
         <article class="program-card">
-          <img src="" alt="" class="img-responsive">
+          <img src="images/citydesign.jpg" alt="New York City College Of Technology" class="img-responsive">
           <div class="card-body">
             <h4>New York City College Of Technology</h4>
             <h3>Industrial Design Technology</h3>
@@ -214,7 +214,7 @@
       </a>
       <a href="http://www.citytech.cuny.edu/communication-design/communication-design-aas.aspx" class="card-link">
         <article class="program-card">
-          <img src="" alt="" class="img-responsive">
+          <img src="images/citydesign.jpg" alt="New York City College Of Technology" class="img-responsive">
           <div class="card-body">
             <h4>New York City College Of Technology</h4>
             <h3>Communication Design</h3>
