--- a/final/bachelor.html
+++ b/final/bachelor.html
@@ -65,7 +65,7 @@
     <main>
       <a href="http://www.citytech.cuny.edu/communication-design/communication-design-bfa.aspx" class="card-link">
         <article class="program-card">
-          <img src="" alt="" class="img-responsive">
+          <img src="images/citydesign.jpg" alt="New York City College Of Technology" class="img-responsive">
           <div class="card-body">
             <h4>New York City College Of Technology </h4>
             <h3>Communication Design </h3>
@@ -80,7 +80,7 @@
       </a>
       <a href="https://www.qc.cuny.edu/academics/art/design-bfa/" class="card-link">
         <article class="program-card">
-          <img src="" alt="" class="img-responsive">
+          <img src="images/queensbfa.jpg" alt="Queens College" class="img-responsive">
           <div class="card-body">
             <h4>Queens College</h4>
             <h3>Design</h3>
@@ -96,7 +96,7 @@
       </a>
       <a href="https://edm.ccny.cuny.edu/" class="card-link">
         <article class="program-card">
-          <img src="" alt="" class="img-responsive">
+          <img src="images/bmcc.jpg" alt="MMD BMCC" class="img-responsive">
           <div class="card-body">
             <h4>The City College of New York </h4>
             <h3>Electronic Design and Multimedia </h3>
@@ -111,7 +111,7 @@
       </a>
       <a href="https://www.york.cuny.edu/performing-and-fine-arts/programs/communications-technology" class="card-link">
         <article class="program-card">
-          <img src="" alt="" class="img-responsive">
+        <img src="images/york.png" alt="York College" class="img-responsive">
           <div class="card-body">
             <h4>York College </h4>
             <h3>Communications Technology</h3>
@@ -126,7 +126,7 @@
       </a>
       <a href="https://lehman.smartcatalogiq.com/en/2019-2021/undergraduate-bulletin/academic-departments-and-programs/art/computer-graphics-and-imaging-b-s-58-credit-major/" class="card-link">
         <article class="program-card">
-          <img src="" alt="" class="img-responsive">
+            <img src="images/lehman.jpg" alt="Lehman College" class="img-responsive">
           <div class="card-body">
             <h4>Lehman College </h4>
             <h3>Computer Graphics and Imaging</h3>
@@ -140,7 +140,7 @@
       </a>
       <a href="https://www.baruch.cuny.edu/confluence/pages/viewpage.action?pageId=24052375#DepartmentofFineandPerformingArts-major" class="card-link">
         <article class="program-card">
-          <img src="" alt="" class="img-responsive">
+          <img src="images/baruch.png" alt="Baruch" class="img-responsive">
           <div class="card-body">
             <h4>Baruch College</h4>
             <h3>Graphic Communication </h3>
