--- a/final/bronx.html
+++ b/final/bronx.html
@@ -66,7 +66,7 @@
     <main>
       <a href="http://www.bcc.cuny.edu/academics/academic-departments/art-and-music-department/degree-and-certificate-programs-courses/digital-design/" class="card-link">
         <article class="program-card">
-          <img src="" alt=""class="img-responsive">
+          <img src="images/bronx.jpg" alt="DD Bronx" class="img-responsive">
           <div class="card-body">
             <h4>Bronx Community College </h4>
             <h3>Digital Design</h3>
@@ -80,7 +80,7 @@ visualization, motion graphics design and interactive multimedia design.</p>
       </a>
       <a href="https://www.hostos.cuny.edu/www-hostosdesign-com" class="card-link">
         <article class="program-card">
-          <img src="" alt=""class="img-responsive">
+            <img src="images/hostosdigital.png" alt="Hostos Game" class="img-responsive">
           <div class="card-body">
             <h4>Hostos Community College</h4>
             <h3>Digital Design & Animation</h3>
@@ -94,7 +94,7 @@ motion graphics, animation, graphic design and/or web design. </p>
       </a>
       <a href="https://www.hostos.cuny.edu/Administrative-Offices/Office-of-Academic-Affairs/Departments/Humanities/Programs/Game-Design-(1)" class="card-link">
         <article class="program-card">
-          <img src="" alt=""class="img-responsive">
+          <img src="images/hostosgame.png" alt="Hostos" class="img-responsive">
           <div class="card-body">
             <h4>Hostos Community College</h4>
             <h3>Game Design</h3>
@@ -108,7 +108,7 @@ with additional career opportunities in the field of entertainment software publ
       </a>
       <a href="https://lehman.smartcatalogiq.com/en/2019-2021/undergraduate-bulletin/academic-departments-and-programs/art/computer-graphics-and-imaging-b-s-58-credit-major/" class="card-link">
         <article class="program-card">
-          <img src="" alt=""class="img-responsive">
+            <img src="images/lehman.jpg" alt="Lehman College" class="img-responsive">
           <div class="card-body">
             <h4>Lehman College </h4>
             <h3>Computer Graphics and Imaging</h3>
