--- a/final/brooklyn.html
+++ b/final/brooklyn.html
@@ -81,7 +81,7 @@
       </a>
       <a href="http://www.citytech.cuny.edu/mechanical/industrial-technology-aas.aspx" class="card-link">
         <article class="program-card">
-          <img src="" alt="" class="img-responsive">
+          <img src="images/citydesign.jpg" alt="New York City College Of Technology" class="img-responsive">
           <div class="card-body">
             <h4>New York City College Of Technology</h4>
             <h3>Industrial Design Technology</h3>
@@ -96,7 +96,7 @@
       </a>
       <a href="http://www.citytech.cuny.edu/communication-design/communication-design-aas.aspx" class="card-link">
         <article class="program-card">
-          <img src="" alt="" class="img-responsive">
+          <img src="images/citydesign.jpg" alt="New York City College Of Technology" class="img-responsive">
           <div class="card-body">
             <h4>New York City College Of Technology </h4>
             <h3>Communication Design</h3>
@@ -111,7 +111,7 @@
       </a>
       <a href="http://www.citytech.cuny.edu/communication-design/communication-design-bfa.aspx" class="card-link">
         <article class="program-card">
-          <img src="" alt="" class="img-responsive">
+          <img src="images/citydesign.jpg" alt="New York City College Of Technology" class="img-responsive">
           <div class="card-body">
             <h4>New York City College Of Technology </h4>
             <h3Communication Design</h3>
@@ -141,7 +141,7 @@
 
     );
   </script>
-  
+
 </body>
 
 </html>
