--- a/final/index.html
+++ b/final/index.html
@@ -83,7 +83,7 @@
       <section class="events">
         <h2>Events</h2>
         <article class="event-item">
-          <img src="https://via.placeholder.com/300x200" alt="">
+          <img src="images/events.jpg" alt="EVENTS" class="img-responsive">
           <h3><a href="https://events.cuny.edu/cec/virtual-digital-design-showcase-day/">VIRTUAL DIGITAL DESIGN SHOWCASE DAY</a></h3>
           <ul>
             <li><strong>Date:</strong>June 18, 2020</li>
