--- a/final/industrialdesign.html
+++ b/final/industrialdesign.html
@@ -66,7 +66,7 @@
     <main>
       <a href="https://www.laguardia.edu/" class="card-link">
         <article class="program-card">
-          <img src="" alt=""class="img-responsive">
+          <img src="images/laguardia.jpg" alt="LaGuardia" class="img-responsive">
           <div class="card-body">
             <h4>LaGuardia Community College</h4>
             <h3>A.A.S.</h3>
@@ -80,7 +80,7 @@ institution.</p>
       </a>
       <a href="http://www.citytech.cuny.edu/mechanical/industrial-technology-aas.aspx" class="card-link">
         <article class="program-card">
-          <img src="" alt=""class="img-responsive">
+        <img src="images/citydesign.jpg" alt="New York City College Of Technology" class="img-responsive">
           <div class="card-body">
             <h4>New York City College Of Technology </h4>
             <h3>A.A.S. </h3>
