--- a/final/manhattan.html
+++ b/final/manhattan.html
@@ -66,7 +66,7 @@
     <main>
       <a href="https://www.bmcc.cuny.edu/academics/departments/media-arts-and-technology/animation-and-motion-graphics/" class="card-link">
         <article class="program-card">
-          <img src="" alt=""class="img-responsive">
+          <img src="images/bmcc.jpg" alt="MMD BMCC" class="img-responsive">
           <div class="card-body">
             <h4>Borough of Manhattan Community College</h4>
             <h3>Animation and Motion Graphics </h3>
@@ -80,7 +80,7 @@ and special effects for advertising campaigns, video games, movies, and televisi
       </a>
       <a href="https://www.bmcc.cuny.edu/academics/departments/media-arts-and-technology/multimedia-programming-and-design/" class="card-link">
         <article class="program-card">
-          <img src="" alt=""class="img-responsive">
+          <img src="images/bmcc.jpg" alt="MMD BMCC" class="img-responsive">
           <div class="card-body">
             <h4>Borough of Manhattan Community College</h4>
             <h3>Multimedia Programming and Design</h3>
@@ -94,9 +94,9 @@ market multimedia products, programs or services.</p>
       </a>
       <a href="https://edm.ccny.cuny.edu/" class="card-link">
         <article class="program-card">
-          <img src="" alt=""class="img-responsive">
+          <img src="images/citycollegebfa.png" alt="City College of New York" class="img-responsive">
           <div class="card-body">
-            <h4>The City College of New Yor</h4>
+            <h4>The City College of New York</h4>
             <h3>Electronic Design and Multimedia</h3>
             <h4>B.F.A. </h4>
             <h4>Digital Design </h4>
@@ -110,7 +110,7 @@ university, and has a 18-year record of alumni success.
       </a>
       <a href="https://www.baruch.cuny.edu/confluence/pages/viewpage.action?pageId=24052375#DepartmentofFineandPerformingArts-major" class="card-link">
         <article class="program-card">
-          <img src="" alt=""class="img-responsive">
+          <img src="images/baruch.png" alt="Baruch" class="img-responsive">
           <div class="card-body">
             <h4>Baruch College </h4>
             <h3>Graphic Communication </h3>
