--- a/final/queens.html
+++ b/final/queens.html
@@ -66,7 +66,7 @@
     <main>
       <a href="https://www.laguardia.edu/" class="card-link">
         <article class="program-card">
-          <img src="" alt="" class="img-responsive">
+          <img src="images/laguardia.jpg" alt="LaGuardia" class="img-responsive">
           <div class="card-body">
             <h4>LaGuardia Community College</h4>
             <h3>Industrial Design</h3>
@@ -82,7 +82,7 @@
       </a>
       <a href="https://www.laguardia.edu/new-media-technology/" class="card-link">
         <article class="program-card">
-          <img src="" alt="" class="img-responsive">
+          <img src="images/laguardia.jpg" alt="LaGuardia" class="img-responsive">
           <div class="card-body">
             <h4>LaGuardia Community College </h4>
             <h3>New Media Technology</h3>
@@ -97,7 +97,7 @@
       </a>
       <a href="https://www.qcc.cuny.edu/academies/vapa-academy.html" class="card-link">
         <article class="program-card">
-          <img src="" alt="" class="img-responsive">
+          <img src="images/queensdesign.png" alt="Queensborough" class="img-responsive">
           <div class="card-body">
             <h4>Queensborough Community College </h4>
             <h3>Digital Art and Design </h3>
@@ -112,7 +112,7 @@
       </a>
       <a href="https://www.qc.cuny.edu/academics/art/design-bfa/" class="card-link">
         <article class="program-card">
-          <img src="" alt="" class="img-responsive">
+          <img src="images/queensbfa.jpg" alt="Queens College" class="img-responsive">
           <div class="card-body">
             <h4>Queens College</h4>
             <h3>Design B.F.A</h3>
@@ -127,7 +127,7 @@
       </a>
       <a href="https://www.york.cuny.edu/produce-and-print/contents/bulletin/school-of-arts-and-sciences/performing-and-fine-arts/communications-technology-bs" class="card-link">
         <article class="program-card">
-          <img src="" alt="" class="img-responsive">
+          <img src="images/york.png" alt="York College" class="img-responsive">
           <div class="card-body">
             <h4>York College</h4>
             <h3>Communications Technology</h3>
