--- a/final/brooklyn.html
+++ b/final/brooklyn.html
@@ -66,7 +66,7 @@
     <main>
       <a href="https://www.kbcc.cuny.edu/academicdepartments/art/about.html" class="card-link">
         <article class="program-card">
-          <img src="" alt="" class="img-responsive">
+          <img src="images/kingdesign.png" alt="Kingsborough" class="img-responsive">
           <div class="card-body">
             <h4>Kingsborough Community College</h4>
             <h3>Graphic Design and Illustration </h3>
