--- a/final/index.html
+++ b/final/index.html
@@ -94,6 +94,7 @@
       </section> <!-- .events-->
     </main>
     <footer>&copy;Copyright 2020 The City University of New York </footer>
+    <li><a href="../index.html">Back to Class Website</a></li>
   </div> <!--#wrapper-->
   <script src="easy_background.js"></script> <!-- must link the script for the banner to work-->
   <script>
