--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <li><a href="exercise10/exercise10.html">Exercise 10</a></li>
     <li><a href="exercise11.html">Exercise 11</a></li>
     <li><a href="exercise12.html">Exercise 12</a></li>
+    <li><a href="midterm/index.html">Final</a></li>
     <li><a href="final/index.html">Final</a></li>
   </ul>
 
